--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ html{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     overflow: hidden;
+    -webkit-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 body {
@@ -49,7 +51,6 @@ aside th {
 #map {
     height: 8192px;
     width: 8192px;
-    /* background-image: url("./Resources/Images/Maps/Amerish/LOD0.png"); */
     left: 0;
     position: absolute;
     top: 0;
