--- a/index.css
+++ b/index.css
@@ -91,3 +91,12 @@ aside th {
     margin-bottom: -4px;
     margin-right: -1px;
 }
+#crossHair {
+    border: 4px solid #FFFFFF;
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    left: 4090px;
+    top: 4090px;
+    z-index: 100;
+}
