--- a/index.css
+++ b/index.css
@@ -4,19 +4,20 @@
     --COLOR-FG-CAPPED-TR: rgb(150, 17, 0);
     --COLOR-FG-CAPPED-VS: rgb(97, 37, 151);
 }
-html{
+
+html {
     background-color: #051010;
     color: white;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     font-weight: 500;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
+
 body {
     margin: 0;
 }
+
+/* Side widgets */
+
 aside {
     background-color: #CCCCCC;
     border: 2px solid #FFFFFF;
@@ -27,14 +28,17 @@ aside {
     width: 200px;
     z-index: 100;
 }
+
 aside span {
     font-size: 16pt;
     font-weight: bold;
 }
+
 aside table {
     margin-top: 10px;
     margin-bottom: 20px;
 }
+
 aside th {
     text-align: left;
 }
@@ -54,12 +58,16 @@ aside th {
     position: absolute;
     z-index: 100;
 }
+
+/* Map renderer */
+
 #viewport {
     height: 100%;
     overflow: hidden;
     position: absolute;
     width: 100%;
 }
+
 #map {
     height: 8192px;
     width: 8192px;
@@ -73,7 +81,7 @@ aside th {
 #map .layer {
     height: 100%;
     width: 100%;
-    position: absolute;    
+    position: absolute;
 }
 
 /* Map tile textures */
@@ -81,7 +89,8 @@ aside th {
 #mapTextureLayer {
     display: grid;
     grid-template: repeat(8, 1024px) / repeat(8, 1024px);
-    padding-top: 120px; /* Offset to (roughly) align tiles and outlines */
+    /* Offset to (roughly) align tiles and outlines */
+    padding-top: 120px;
     z-index: -20;
 }
 
@@ -97,16 +106,14 @@ aside th {
 
 #map polygon {
     fill: #FFFFFF;
-    fill-opacity: 30%;
+    fill-opacity: 0.3;
     stroke: #000000;
-    stroke-width: 1px;
+    stroke-width: 2px;
     z-index: 50;
 }
 
 #map polygon:hover {
-    fill-opacity: 50%;
-    stroke: #FFFFFF;
-    z-index: 5000 !important;
+    fill-opacity: 0.5;
 }
 
 /* Map center marker for debug purposes */
