--- a/index.css
+++ b/index.css
@@ -106,6 +106,25 @@ aside th {
     fill-opacity: 0.6;
 }
 
+/* Map base names */
+
+#mapBaseNameLayer div {
+    position: absolute;
+    overflow: visible;
+    pointer-events: none;
+    z-index: 50;
+}
+
+#mapBaseNameLayer div span {
+    color: #FFFFFF;
+    text-shadow: 0px 0px 5px #000000;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    text-align: center;
+    vertical-align: middle;
+}
+
 /* Map center marker for debug purposes */
 
 #crossHair {
