Switch to API-delivered base outlines

--- a/index.css
+++ b/index.css
@@ -95,6 +95,10 @@ aside th {
 
 /* Map outlines */
 
+#map svg {
+    position: absolute;
+}
+
 #map polygon {
     fill: #FFFFFF;
     fill-opacity: 0.3;
