--- a/index.css
+++ b/index.css
@@ -123,20 +123,27 @@ aside th {
 /* Map base names */
 
 #mapBaseNameLayer div {
+    width: 10em;
+    margin-left: -5em;
+    margin-bottom: -3.5em;
     position: absolute;
-    overflow: visible;
     pointer-events: none;
+    text-align: center;
     z-index: 50;
 }
 
 #mapBaseNameLayer div span {
-    color: #FFFFFF;
     text-shadow: 0px 0px 5px #000000;
-    position: absolute;
-    left: 50%;
-    top: 50%;
     text-align: center;
-    vertical-align: middle;
+    margin-bottom: -2em;
+}
+
+#mapBaseNameLayer div object {
+    height: 3em;
+    width: 3em;
+    margin-left: 3.5em;
+    margin-right: 3.5em;
+    margin-bottom: -1em;
 }
 
 /* Map center marker for debug purposes */
