--- a/index.css
+++ b/index.css
@@ -3,7 +3,6 @@
     --COLOR-FG-CAPPED-NC: rgb(29, 70, 152);
     --COLOR-FG-CAPPED-TR: rgb(150, 17, 0);
     --COLOR-FG-CAPPED-VS: rgb(97, 37, 151);
-    --MAP-SIZE: min(100vh, 100vw);
     --MAP-TILES-PER-AXIS: 1;
 }
 
@@ -12,42 +11,44 @@ html {
     color: white;
     font-family: "Segoe UI", sans-serif;
     font-weight: 600;
-    touch-action: none;
 }
 
 body {
     margin: 0;
-    overscroll-behavior: none;
 }
 
-/* Side widgets */
+/* Map rendering viewport */
 
 #viewport {
-    height: 100%;
-    width: 100%;
-    position: absolute;
+    height: 100vh;
+    width: 100vw;
     overflow: scroll;
-    overscroll-behavior: contain;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 #viewport::-webkit-scrollbar {
-    display: none; /* Chrome, Safari and Opera */
+    display: none;
+}
+
+#mapContainer {
+    height: calc(min(100vh, 100vw) + 2 * (100vh - min(100vh, 100vw)));
+    width: calc(min(100vh, 100vw) + 2 * (100vw - min(100vh, 100vw)));
 }
 
 #map {
-    height: var(--MAP-SIZE);
-    width: var(--MAP-SIZE);
-    position: absolute;
-    user-select: none;
+    height: min(100vh, 100vw);
+    width: min(100vh, 100vw);
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Map layers */
 
 .layer {
-    height: inherit;
-    width: inherit;
+    height: 100%;
+    width: 100%;
     position: absolute;
 }
 
@@ -57,11 +58,11 @@ body {
     display: grid;
     grid-template-rows: repeat(
         var(--MAP-TILES-PER-AXIS),
-        calc(var(--MAP-SIZE) / var(--MAP-TILES-PER-AXIS))
+        calc(min(100vh, 100vw) / var(--MAP-TILES-PER-AXIS))
     );
     grid-template-columns: repeat(
         var(--MAP-TILES-PER-AXIS),
-        calc(var(--MAP-SIZE) / var(--MAP-TILES-PER-AXIS))
+        calc(min(100vh, 100vw) / var(--MAP-TILES-PER-AXIS))
     );
 }
 
@@ -101,5 +102,5 @@ body {
 }
 
 #no-js-modal-banner a {
-    color: white;
+    color: #ffffff;
 }
