--- a/index.css
+++ b/index.css
@@ -130,13 +130,23 @@ body {
 
 .baseLabel {
     width: 7.8em;
-    position: relative;
-    top: -1.5em;
+    position: absolute;
     left: -3.9em;
-    line-height: 1.2;
+    top: 0;
+    line-height: 1.2em;
     text-align: center;
 }
 
+.baseLabelShadow {
+    color: #333333;
+    width: 7.8em;
+    position: absolute;
+    top: 1px;
+    left: calc(-3.9em + 1px);
+    line-height: 1.2em;
+    text-align: center;
+    z-index: -1;
+}
 /* No JS found banner */
 
 #no-js-modal-banner {
