--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ body {
 
 /* Map layers */
 
-.mapLayer {
+.map__layer {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -60,7 +60,7 @@ body {
 
 /* Map tile textures */
 
-.terrainLayer {
+.layer-terrain {
     display: grid;
     grid-template-rows: repeat(
         var(--MAP-TILES-PER-AXIS),
@@ -73,59 +73,59 @@ body {
     z-index: 50;
 }
 
-.terrainTile {
+.layer-terrain__tile {
     /* This keeps the map tile images scaled to their tile div */
     background-size: 100%;
 }
 
 /* Map outlines */
 
-.baseOutlineLayer {
+.layer-hexes {
     z-index: 60;
 }
 
-.baseHex {
+.layer-hexes__hex {
     --baseColour: rgb(255, 255, 255);
 }
 
-.baseHex > * {
+.layer-hexes__hex > * {
     position: absolute;
     stroke-width: 4px;
 }
 
-.baseHexBg {
+.layer-hexes__hex-fill {
     fill: var(--baseColour);
     fill-opacity: 0.3;
     stroke: #000000;
 }
 
-.baseHexFg {
+.layer-hexes__hex-highlight {
     fill: transparent;
     stroke: transparent;
     z-index: 50;
 }
 
-.baseHexFg:hover {
+.layer-hexes__hex-highlight:hover {
     stroke: #ffffff;
 }
 
-.baseHex > * > polygon {
+.layer-hexes__hex > * > polygon {
     pointer-events: visiblePainted;
 }
 
 /* Base names */
 
-.baseNameLayer {
+.layer-names {
     z-index: 80;
 }
 
-.mapAnchor {
+.layer-names__anchor {
     height: 0;
     width: 0;
     position: absolute;
 }
 
-.iconBox {
+.layer-names__icon {
     --baseIconColour: #333333;
     height: 1.5em;
     width: 1.5em;
@@ -134,12 +134,12 @@ body {
     left: -0.75em;
 }
 
-.iconBox > .layeredIcon {
+.layer-names__icon > div {
     height: 100%;
     width: 100%;
 }
 
-.iconBox > .layeredIcon::before {
+.layer-names__icon > div::before {
     background-color: var(--baseIconColour);
     border-radius: 0.75em;
     content: "";
@@ -149,14 +149,14 @@ body {
     opacity: 0.8;
 }
 
-.iconBox > .layeredIcon > img {
+.layer-names__icon > div > img {
     height: 100%;
     width: 100%;
     position: relative;
     top: -1.75em;
 }
 
-.baseLabel {
+.layer-names__label {
     width: 7.8em;
     position: absolute;
     left: -3.9em;
@@ -165,16 +165,13 @@ body {
     text-align: center;
 }
 
-.baseLabelShadow {
+.layer-names__label--shadow {
     color: #333333;
-    width: 7.8em;
-    position: absolute;
     top: 1px;
     left: calc(-3.9em + 1px);
-    line-height: 1.2em;
-    text-align: center;
     z-index: -1;
 }
+
 /* No JS found banner */
 
 #no-js-modal-banner {
