--- a/index.css
+++ b/index.css
@@ -84,33 +84,16 @@ body {
     z-index: 60;
 }
 
-.layer-hexes__hex {
-    --baseColour: rgb(255, 255, 255);
-}
-
-.layer-hexes__hex > * {
-    position: absolute;
+.layer-hexes__hex > polygon {
+    fill: rgb(255, 255, 255);
+    fill-opacity: 0.3;
+    pointer-events: visiblePainted;
+    stroke: #000000;
     stroke-width: 4px;
 }
 
-.layer-hexes__hex-fill {
-    fill: var(--baseColour);
-    fill-opacity: 0.3;
-    stroke: #000000;
-}
-
-.layer-hexes__hex-highlight {
-    fill: transparent;
-    stroke: transparent;
-    z-index: 50;
-}
-
-.layer-hexes__hex-highlight:hover {
+.layer-hexes__hex > polygon:hover {
     stroke: #ffffff;
-}
-
-.layer-hexes__hex > * > polygon {
-    pointer-events: visiblePainted;
 }
 
 /* Base names */
