--- a/ps2-map.css
+++ b/ps2-map.css
@@ -1,15 +1,15 @@
 .ps2map__layer {
   pointer-events: none;
-  width: 100%;
-  height: 100%;
   position: absolute;
   -ms-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+  transition: transform 200ms ease-out;
 }
 
 .ps2map__base-hexes {
   z-index: 20;
+  border: 1px solid green;
 }
 
 .ps2map__base-hexes__hex > polygon {
