--- a/ps2-map.css
+++ b/ps2-map.css
@@ -1,35 +1,34 @@
 .ps2map__viewport {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .ps2map__anchor {
-  position: absolute;
+    position: absolute;
   left: 50%;
   top: 50%;
 }
 
 .ps2map__layer {
-  pointer-events: none;
-  position: absolute;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  user-select: none;
-  transition: transform 200ms ease-out;
+    pointer-events: none;
+    position: absolute;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    transition: transform 200ms ease-out;
+    user-select: none;
 }
 
 .ps2map__base-hexes {
-  z-index: 20;
-  background-image: url(../apl-api/map_assets/Indar_LOD1.png);
-  background-size: 100%;
-  border: 1px solid green;
+    /* Temporary terrain texture to aid with alignment */
+    background-image: url(../apl-api/map_assets/Indar_LOD1.png);
+    background-size: 100%;
 }
 
-.ps2map__base-hexes__hex > polygon {
-  fill: rgb(255, 255, 255);
-  fill-opacity: 0.3;
-  pointer-events: visiblePainted;
-  stroke: #000000;
-  stroke-width: 4px;
+.ps2map__base-hexes__hex>polygon {
+    fill: rgb(255, 255, 255);
+    fill-opacity: 0.3;
+    pointer-events: visiblePainted;
+    stroke: #000000;
+    stroke-width: 4px;
 }
 
 .ps2map__base-hexes__hex > polygon:hover {
