--- a/ps2-map.css
+++ b/ps2-map.css
@@ -21,7 +21,7 @@
     background-size: 100%;
 }
 
-.ps2map__base-hexes__hex>polygon {
+.ps2map__base-hexes__svg>polygon {
     fill: rgb(255, 255, 255);
     fill-opacity: 0.3;
     pointer-events: visiblePainted;
