--- a/ps2-map.css
+++ b/ps2-map.css
@@ -34,6 +34,7 @@
     font-weight: 500;
     position: absolute;
     text-align: center;
+    display: none;
     height: 2em;
     width: 8em;
     /* Slightly janky workaround for getting more pronounced text shadows. The
