--- a/index.css
+++ b/index.css
@@ -61,3 +61,16 @@ body {
     right: 20px;
     padding: 10px;
 }
+
+#toolbar {
+    position: absolute;
+    bottom: 60px;
+    left: 20px;
+    padding: 10px;
+}
+
+#toolbar>h1 {
+    font-size: 18pt;
+    margin-block-start: 0;
+    margin-block-end: 0.5em;
+}
