--- a/index.css
+++ b/index.css
@@ -32,60 +32,40 @@ body {
     height: 100%;
 }
 
-#minimap {
+.sidebar__widget {
     position: relative;
     top: var(--sidebar-margin);
     left: var(--sidebar-margin);
     width: calc(var(--sidebar-width) - var(--sidebar-margin) * 2);
+    z-index: 1;
+}
+
+.sidebar__widget__label {
+    display: block;
+}
+
+#minimap {
     height: calc(var(--sidebar-width) - var(--sidebar-margin) * 2);
 }
 
-.widget {
-    position: absolute;
-    background: rgba(30, 30, 30, 0.8);
-    border: 2px solid grey;
-    width: 240px;
-    z-index: 10;
-}
-
-#widget_base-info {
-    right: 20px;
-    bottom: 60px;
-    padding: 10px;
-}
-
-#widget_base-info>h1 {
-    font-size: 18pt;
-    margin-block-start: 0;
-    margin-block-end: 0.5em;
-}
-
-#widget_base-info_name {
-    display: block;
-    font-size: 14pt;
-    margin-block-end: 0.5em;
-}
-
-#widget_base-info_type {
-    display: block;
-}
-
-#continent-selector-frame {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 10px;
-}
-
 #toolbar {
-    position: absolute;
-    bottom: 60px;
-    left: 20px;
-    padding: 10px;
+    height: 100px;
+    margin-top: 10px;
+
+    background-color: darkgoldenrod;
 }
 
-#toolbar>h1 {
-    font-size: 18pt;
-    margin-block-start: 0;
-    margin-block-end: 0.5em;
+#toolbar>div {
+    background-color: blue;
+}
+
+.toolbar__button {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.toolbar__button__active {
+    border-color: red;
 }
